# angular

./: .bazelignore  .bazelrc  .clang-format  .gitignore  .pullapprove.yml  BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE  package.json  test-main.js  tslint.json
.circleci/: config.yml
.github/: angular-robot.yml
.github/workflows/: assistant-to-the-branch-manager.yml  benchmark-compare.yml  dev-infra.yml  google-internal-tests.yml  update-cli-help.yml
.ng-dev/: commit-message.mts
adev/src/content/reference/errors/: NG0950.md
aio/: package.json
aio/content/errors/: NG0950.md
aio/content/examples/: BUILD.bazel  cli_example.bzl
aio/content/examples/ajs-quick-reference/: BUILD.bazel
aio/content/examples/ajs-quick-reference/src/app/: app.module.ts
aio/content/examples/animations/: BUILD.bazel
aio/content/examples/animations/e2e/src/: app.e2e-spec.ts
aio/content/examples/animations/src/app/: app.module.ts
aio/content/examples/architecture/: BUILD.bazel
aio/content/examples/attribute-directives/: BUILD.bazel
aio/content/examples/bootstrapping/: BUILD.bazel
aio/content/examples/cli-quickstart/: BUILD.bazel
aio/content/examples/component-interaction/: BUILD.bazel
aio/tools/examples/shared/: package.json
aio/tools/examples/shared/boilerplate/cli/: package.json
aio/tools/examples/shared/boilerplate/cli-ajs/: package.json
aio/tools/examples/shared/boilerplate/elements/: package.json
aio/tools/examples/shared/boilerplate/i18n/: package.json
aio/tools/examples/shared/boilerplate/service-worker/: package.json
aio/tools/examples/shared/boilerplate/universal/: package.json
goldens/circular-deps/: packages.json
goldens/public-api/core/: core.md  errors.md
goldens/public-api/router/: router.md
goldens/size-tracking/: aio-payloads.json
integration/: BUILD.bazel
integration/bazel/: WORKSPACE  package.json
integration/cli-signal-inputs/: package.json
integration/i18n/: package.json  rollup.config.js  tsconfig.json
integration/platform-server/: base-config.mjs
integration/terser/: test.js
modules/benchmarks/src/ng_template_outlet_context/: ng_template_outlet_context.perf-spec.ts
modules/benchmarks/src/ng_template_outlet_context/ng2/: index.ts
modules/playground/src/routing/: drafts.html  inbox-detail.html  inbox.html
scripts/benchmark-diff/: index.mts
scripts/benchmarks/: index.mts  results.mts  targets.mts  utils.mts
scripts/ci/: offline_compiler_test.sh
tools/: BUILD.bazel  defaults.bzl
tools/esm-interop/patches/npm/: @angular+build-tooling+0.0.0-680aab4562e5bb684518ca496cb449a6c447601d.patch  @angular+build-tooling+0.0.0-76c632f6480810d48befe4743702eec9171fc763.patch
