load("//packages/bazel:index.bzl", "protractor_web_test_suite")
load("//tools:defaults.bzl", "ng_module", "ts_library")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")

ng_module(
    name = "sources",
    srcs = [":cli_environment"] + glob(["src/**/*.ts"], exclude = [
        "src/app/app.module.1.ts"
    ]),
    assets = glob(["src/assets/**/*.html", "src/assets/**/*.css"]),
    # TODO: FW-1004 Type checking is currently not complete.
    type_check = False,
    deps = [
        "//packages/core",
        "//packages/forms",
        "//packages/router",
        "//packages/platform-browser",
        "//packages/platform-browser-dynamic",
    ],
    tsconfig = "//aio/content/examples:tsconfig-example.json",
)

genrule(
    name = "cli_environment",
    outs = ["src/environments/environment.ts"],
    cmd = "echo 'export const environment = {production: false};' > $@"
)

ts_devserver(
    name = "devserver",
    entry_module = "angular/aio/content/examples/ajs-quick-reference/src/main",
    index_html = "src/index.html",
    port = 4200,
    scripts = ["@ngdeps//node_modules/tslib:tslib.js"],
    static_files = [
        "@ngdeps//node_modules/zone.js:dist/zone.js",
        # Needed because application is bootstrapped with JIT.
        "@ngdeps//node_modules/reflect-metadata:Reflect.js",
    ],
    additional_root_paths = [
        # Needed because the CLI project normally loads assets relatively to the "src" directory.
        "angular/aio/content/examples/ajs-quick-reference/src",
    ],
    deps = [":sources"],
    data = glob(["src/assets/**/*.png"])
)

## ----------------------------------------------------------
##                    E2E tests
## ----------------------------------------------------------


ts_library(
    name = "e2e_tests_lib",
    testonly = True,
    srcs = glob(["e2e/**/*.ts"]),
    tsconfig = "//aio/content/examples:tsconfig-e2e.json",
    deps = [
        "//packages/private/testing",
        "@ngdeps//@types/jasminewd2",
        "@ngdeps//protractor",
    ],
)


protractor_web_test_suite(
    name = "e2e_tests",
    data = ["//packages/bazel/src/protractor/utils"],
    on_prepare = "//aio/content/examples:start-server.js",
    server = ":devserver",
    deps = [
        ":e2e_tests_lib",
        "@ngdeps//protractor",
        "@ngdeps//selenium-webdriver",
    ],
)
