load("//aio/content/examples:cli_example.bzl", "cli_example", "cli_example_e2e")

cli_example(
    name = "example",
    srcs = glob(["src/**/*.ts"], exclude = ["src/app/app.module.1.ts"]),
    deps = [
        "//packages/core",
        "//packages/forms",
        "//packages/router",
        "//packages/platform-browser",
        "//packages/platform-browser-dynamic",
    ],
    entry_module = "angular/aio/content/examples/ajs-quick-reference/src/main",
    server_assets = glob(["src/assets/**/*.png"]),
    # Needed because the CLI project normally loads assets relatively to the "src" directory.
    server_root_paths = ["angular/aio/content/examples/ajs-quick-reference/src"]
)

cli_example_e2e(
    name = "e2e_tests",
    srcs = glob(["e2e/**/*.ts"]),
    server = ":example_devserver",
)
